--- a/.travis.yml
+++ b/.travis.yml
@@ -323,7 +323,7 @@ install: |-
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
     export PATH=$(echo "$PATH" | sed -e 's|:/usr/local/cmake-[^:]*/bin:|:|')
 
-    sudo apt-get install -y build-essential cmake perl libdbi-perl libdbd-odbc-perl python python3 python-pip python3-pip
+    sudo apt-get install -y build-essential cmake perl libdbi-perl libdbd-odbc-perl python python3 python-pip python-setuptools python3-pip python3-setuptools
 
     pip install --user pyodbc
     pip3 install --user pyodbc conan
@@ -342,7 +342,8 @@ install: |-
   elif [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
     export OLD_VSWHERE=yes
 
-    choco install visualstudio2017-workload-python
+    choco install python2
+    choco install python3
 
     # TODO: use choco instead of manual download/unpack/env setting, once 3.14+ version
     # is available, since starting from 3.14 WiX Toolset doesn't depend on .NET 3.5,
