Do not try to use system Google Test

--- a/.travis.yml
+++ b/.travis.yml
@@ -469,7 +469,7 @@ install: |-
     CMAKE_CONFIGURE_ARGS="-DICU_ROOT=$(brew --prefix)/opt/icu4c $CMAKE_CONFIGURE_ARGS"
   fi
   if [[ "$EXTERNAL_THIRD_PARTY" == "yes" ]]; then
-    CMAKE_CONFIGURE_ARGS="-DCH_ODBC_USE_SYSTEM_THIRD_PARTIES=ON -DCH_ODBC_USE_SYSTEM_FOLLY=OFF -DCH_ODBC_USE_SYSTEM_NANODBC=OFF $CMAKE_CONFIGURE_ARGS"
+    CMAKE_CONFIGURE_ARGS="-DCH_ODBC_USE_SYSTEM_THIRD_PARTIES=ON -DCH_ODBC_USE_SYSTEM_FOLLY=OFF -DCH_ODBC_USE_SYSTEM_GOOGLETEST=OFF -DCH_ODBC_USE_SYSTEM_NANODBC=OFF $CMAKE_CONFIGURE_ARGS"
     if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       CMAKE_CONFIGURE_ARGS="-DOPENSSL_ROOT_DIR=$(brew --prefix)/opt/openssl $CMAKE_CONFIGURE_ARGS"
     fi
