Fix Path filtering in Windows

--- a/.travis.yml
+++ b/.travis.yml
@@ -359,9 +359,9 @@ install: |-
     export WIX="$(cd wix314-binaries && pwd -W)"
 
     PY3_USER_SITE_PATH="$(py -3 -m site --user-site)"
-    export PATH="${PY3_USER_SITE_PATH//\\//}/../Scripts:$PATH"
-
-    echo $PATH
+    PY3_USER_SITE_PATH="${PY3_USER_SITE_PATH//\\//}"
+    PY3_USER_SITE_PATH="${PY3_USER_SITE_PATH/C\://C}"
+    export PATH="$PY3_USER_SITE_PATH/../Scripts:$PATH"
 
     py -3 -m pip install --user conan
   fi
