--- a/driver/test/CMakeLists.txt
+++ b/driver/test/CMakeLists.txt
@@ -67,6 +67,8 @@ function (declare_odbc_test_targets libname UNICODE)
         ${PROJECT_SOURCE_DIR}/driver/utils/conversion_std.h
         ${PROJECT_SOURCE_DIR}/driver/utils/conversion_icu.h
         misc_it.cpp
+        column_bindings_it.cpp
+        statement_parameter_bindings_it.cpp
         statement_parameters_it.cpp
         performance_it.cpp
     )
