Add custom poco

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
+[submodule "contrib/poco"]
+    path = contrib/poco
+    url = https://github.com/ClickHouse-Extras/poco.git
+    branch = master
 [submodule "contrib/ssl"]
     path = contrib/ssl
     url = https://github.com/ClickHouse-Extras/ssl.git
