--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "contrib/poco"]
     path = contrib/poco
     url = https://github.com/ClickHouse-Extras/poco.git
-    branch = master
+    branch = clickhouse-odbc
 [submodule "contrib/ssl"]
     path = contrib/ssl
     url = https://github.com/ClickHouse-Extras/ssl.git
