--- a/.travis.yml
+++ b/.travis.yml
@@ -323,13 +323,13 @@ install: |-
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
     export PATH=$(echo "$PATH" | sed -e 's|:/usr/local/cmake-[^:]*/bin:|:|')
     sudo apt-get install -y build-essential cmake perl libdbi-perl libdbd-odbc-perl python python-pip python-pyodbc python3 python3-pip python3-pyodbc python3-setuptools
-    pip3 install --user testflows
+    pip3 install --user 'testflows==1.6.56'
   elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
     # brew install cmake perl python
     PERL_MM_USE_DEFAULT=1 cpan -T DBD::ODBC
     if [[ "$ODBC_PROVIDER" == "UnixODBC" ]]; then
       pip2 install --user pyodbc
-      pip3 install --user pyodbc testflows
+      pip3 install --user pyodbc 'testflows==1.6.56'
     fi
   elif [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
     export OLD_VSWHERE=yes
