Disable WORKAROUND_ENABLE_DEFINE_SQLBindParam for iODBC - with proper linkage the issue should be fixed anyway

--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -20,7 +20,7 @@ else ()
 endif ()
 
 if ("${ODBC_PROVIDER}" STREQUAL "iODBC")
-    set (WORKAROUND_ENABLE_DEFINE_SQLBindParam 1)
+#   set (WORKAROUND_ENABLE_DEFINE_SQLBindParam 1)
     set (WORKAROUND_ENABLE_NO_UNICODE_CHARS_IN_COLUMN_NAMES_IN_TESTS 1)
 endif ()
 
