Test artifacts upload

--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -122,6 +122,12 @@ jobs:
     - name: Package
       run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --target package
 
+    - name: Upload the artifacts
+      uses: actions/upload-artifact@v3
+      with:
+          name: my-artifact
+          path: ${{ github.workspace }}/build
+
     - name: Test - Run unit tests
       working-directory: ${{ github.workspace }}/build
       run: ctest --output-on-failure --build-config ${{ matrix.build_type }} -R '.*-ut.*'
