--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -123,14 +123,11 @@ jobs:
       run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --target package
 
     - name: Upload the artifacts
+      if:  ${{ matrix.os == 'ubuntu-18.04' && matrix.compiler == 'GCC' && matrix.odbc_provider == 'UnixODBC' }}
       uses: actions/upload-artifact@v3
       with:
           name: my-artifact
-          path: |
-            -${{ github.workspace }}/build/*.rpm
-            -${{ github.workspace }}/build/*.deb
-            -${{ github.workspace }}/build/*.tar.gz
-            -${{ github.workspace }}/build/*.tar.xz
+          path: ${{ github.workspace }}/build/clickhouse-odbc-*
 
     - name: Test - Run unit tests
       working-directory: ${{ github.workspace }}/build
