--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -2,7 +2,7 @@ name: Build and Test - macOS
 
 on:
   schedule:
-    - cron: '0.0.*.*.1'
+    - cron: '0 0 * * 1'
   push:
     branches: [ master ]
   pull_request:
