--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -60,7 +60,7 @@ jobs:
       run: |
         cd "$(brew --repo)" && git fetch && git reset --hard origin/master && cd -
         brew update
-        brew remove -f -q libiodbc unixodbc freetds php node
+        brew remove -f --ignore-dependencies -q libiodbc unixodbc freetds php node composer
         brew upgrade
         brew install git cmake perl python openssl poco icu4c binutils
         pip3 install --user 'testflows==1.6.56'
