--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -85,6 +85,13 @@ jobs:
     - name: Package
       run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --target package
 
+    - name: Upload the artifacts
+      if:  ${{ matrix.os == 'windows-2016' && matrix.build_type == 'Release' }}
+      uses: actions/upload-artifact@v3
+      with:
+          name: windows
+          path: ${{ github.workspace }}/build/clickhouse-odbc-*
+
     - name: Test - Run unit tests
       working-directory: ${{ github.workspace }}/build
       run: ctest --output-on-failure --build-config ${{ matrix.build_type }} -R '.*-ut.*'
