--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -123,10 +123,10 @@ jobs:
       run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --target package
 
     - name: Upload the artifacts
-      if:  ${{ matrix.os == 'ubuntu-18.04' && matrix.compiler == 'GCC' && matrix.odbc_provider == 'UnixODBC' }}
+      if:  ${{ matrix.os == 'ubuntu-18.04' && matrix.compiler == 'GCC' && matrix.odbc_provider == 'UnixODBC' && matrix.build_type == 'Release' }}
       uses: actions/upload-artifact@v3
       with:
-          name: my-artifact
+          name: linux
           path: ${{ github.workspace }}/build/clickhouse-odbc-*
 
     - name: Test - Run unit tests
