--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -12,7 +12,7 @@ on:
       - created
 
 concurrency:
-  group: linux-${{ github.head_ref }}
+  group: docker-${{ github.head_ref }}
   cancel-in-progress: true
 
 env:
